--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,27 @@
 {
-    "name": "my/app",
+    "name": "u/project",
+    "description": "Tiny MVC",
     "type": "project",
-    "description": "The Project.",
-    "keywords": [],
     "license": "MIT",
-    "require": {
-        "php": "^7.4"
-    },
-    "require-dev": {
-    },
+    "authors": [
+        {
+            "name": "fg-yarullin",
+            "email": "failneke@gmail.com"
+        }
+    ],
+
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "scripts": {
+            "App\\": "app/",
+            "Controllers\\": "app/Controllers",
+            "Core\\": "app/Core",
+            "Models\\": "app/Models"
+        },
+
+        "classmap": ["app"]
     },
 
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
+    "require": {
+        "monolog/monolog": "^2.2"
     }
 }
