--- a/php/local.ini
+++ b/php/local.ini
@@ -3,3 +3,7 @@ date.timezone = "Europe/Moscow"
 
 upload_max_filesize=40M
 post_max_size=40M
+
+session.save_handler=files
+session.save_path="/tmp"
+session.use_cookies=1
