--- a/php/local.ini
+++ b/php/local.ini
@@ -2,7 +2,7 @@
 date.timezone = "Europe/Moscow"
 
 upload_max_filesize=40M
-post_max_size=40M
+post_max_size=кM
 
 session.save_handler=files
 session.save_path="/tmp"
