--- a/php/local.ini
+++ b/php/local.ini
@@ -1,9 +1,10 @@
 [Date]
 date.timezone = "Europe/Moscow"
 
-upload_max_filesize=40M
-post_max_size=кM
+upload_max_filesize=16M
+post_max_size=16M
 
 session.save_handler=files
 session.save_path="/tmp"
 session.use_cookies=1
+extension=mcrypt.so
